--- a/src/lib/i18n/strings.en.json
+++ b/src/lib/i18n/strings.en.json
@@ -39,7 +39,178 @@
     "noResults": "No results found",
     "theme": "Theme",
     "language": "Language",
-    "optional": "Optional"
+    "optional": "Optional",
+    "expand": "Expand",
+    "collapse": "Collapse"
+  },
+  "admin": {
+    "dashboard": "Admin Dashboard",
+    "overview": "Overview",
+    "users": "Users",
+    "listings": "Listings",
+    "categories": "Categories",
+    "boosted": "Boosted Listings",
+    "locations": "Locations",
+    "settings": "Settings",
+    "navigation": "Navigation",
+    "totalUsers": "Total Users",
+    "totalListings": "Total Listings",
+    "activeListings": "Active Listings",
+    "pausedListings": "Paused Listings",
+    "totalBoosted": "Total Boosted",
+    "activeBoosted": "Active Boosted",
+    "totalCategories": "Total Categories",
+    "totalLocations": "Total Locations",
+    "totalEarnings": "Total Earnings",
+    "userGrowth": "User Growth Over Time",
+    "listingsPerCategory": "Listings per Category",
+    "earningsOverTime": "Earnings Over Time",
+    "boostedByTier": "Boosted Listings by Tier",
+    "locationDistribution": "Location Distribution",
+    "recentActivity": "Recent Activity",
+    "type": "Type",
+    "nameTitle": "Name/Title",
+    "user": "User",
+    "date": "Date",
+    "siteInformation": "Site Information",
+    "siteName": "Site Name",
+    "siteDescription": "Site Description",
+    "footerText": "Footer Text",
+    "branding": "Branding",
+    "logo": "Logo",
+    "favicon": "Favicon",
+    "uploadNew": "Upload New",
+    "recommendedLogo": "Recommended: 200x200px PNG or JPG",
+    "recommendedFavicon": "Recommended: 32x32px ICO",
+    "saveSettings": "Save Settings",
+    "usersManagement": "Users Management",
+    "name": "Name",
+    "email": "Email",
+    "role": "Role",
+    "status": "Status",
+    "createdAt": "Created At",
+    "actions": "Actions",
+    "promote": "Promote",
+    "suspend": "Suspend",
+    "delete": "Delete",
+    "listingsManagement": "Listings Management",
+    "title": "Title",
+    "owner": "Owner",
+    "category": "Category",
+    "status": "Status",
+    "createdAt": "Created At",
+    "pause": "Pause",
+    "publish": "Publish",
+    "categoriesManagement": "Categories Management",
+    "englishName": "English Name",
+    "frenchName": "French Name",
+    "listingType": "Listing Type",
+    "parentCategory": "Parent Category",
+    "noneTopLevel": "None (Top-level category)",
+    "addNewCategory": "Add New Category",
+    "editCategory": "Edit Category",
+    "categoriesHierarchy": "Categories Hierarchy",
+    "locationsManagement": "Locations Management",
+    "region": "Region",
+    "city": "City",
+    "quarter": "Quarter",
+    "addNewLocation": "Add New Location",
+    "editLocation": "Edit Location",
+    "locationsHierarchy": "Locations Hierarchy",
+    "boostedListings": "Boosted Listings",
+    "listing": "Listing",
+    "tier": "Tier",
+    "price": "Price",
+    "startDate": "Start Date",
+    "endDate": "End Date",
+    "isActive": "Is Active",
+    "accessDenied": "Access Denied",
+    "noPermission": "You do not have permission to access this page.",
+    "confirmAction": "Confirm Action",
+    "areYouSure": "Are you sure you want to perform this action?",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "deleteCategory": "Delete Category",
+    "deleteCategoryMessage": "Are you sure you want to delete this category? All listings in this category will be affected.",
+    "deleteLocation": "Delete Location",
+    "deleteLocationMessage": "Are you sure you want to delete this location? All listings with this location will be affected.",
+    "suspendUser": "Suspend User",
+    "suspendUserMessage": "Are you sure you want to suspend this user?",
+    "deleteUser": "Delete User",
+    "deleteUserMessage": "Are you sure you want to delete this user? This action cannot be undone.",
+    "pauseListing": "Pause Listing",
+    "pauseListingMessage": "Are you sure you want to pause this listing?",
+    "deleteListing": "Delete Listing",
+    "deleteListingMessage": "Are you sure you want to delete this listing? This action cannot be undone.",
+    "searchByTitle": "Search by title",
+    "allStatuses": "All Statuses",
+    "draft": "Draft",
+    "pending": "Pending",
+    "published": "Published",
+    "paused": "Paused",
+    "expired": "Expired",
+    "removed": "Removed",
+    "allCategories": "All Categories",
+    "allUsers": "All Users",
+    "applyFilters": "Apply Filters",
+    "created": "Created",
+    "previous": "Previous",
+    "next": "Next",
+    "showing": "Showing",
+    "to": "to",
+    "of": "of",
+    "searchLocations": "Search locations...",
+    "noneTopLevelCategory": "None (Top-level category)",
+    "subgroup": "Subgroup",
+    "subcategory": "Subcategory",
+    "saveCategory": "Save Category",
+    "noneRegion": "None (Region)",
+    "createLocation": "Create Location",
+    "updateLocation": "Update Location",
+    "noLocationsFound": "No locations found.",
+    "tryDifferentSearch": "Try a different search term.",
+    "saving": "Saving...",
+    "good": "Good",
+    "service": "Service",
+    "job": "Job",
+    "allTiers": "All Tiers",
+    "top": "Top",
+    "premium": "Premium",
+    "featured": "Featured",
+    "paymentStatus": "Payment Status",
+    "paid": "Paid",
+    "failed": "Failed",
+    "refunded": "Refunded",
+    "priceXAF": "Price (XAF)",
+    "active": "Active",
+    "inactive": "Inactive",
+    "dates": "Dates",
+    "starts": "Starts",
+    "expires": "Expires",
+    "unknownUser": "Unknown User",
+    "reportsManagement": "Reports Management",
+    "reports": "Reports",
+    "reportID": "Report ID",
+    "reporter": "Reporter",
+    "reason": "Reason",
+    "markReviewed": "Mark Reviewed",
+    "takeAction": "Take Action",
+    "suspendListing": "Suspend Listing",
+    "warnUser": "Warn User",
+    "removeListing": "Remove Listing",
+    "status_open": "Open",
+    "status_reviewing": "Reviewing",
+    "status_closed": "Closed",
+    "noReportsFound": "No reports found",
+    "noReportsToDisplay": "There are currently no reports to display.",
+    "overviewEmoji": "📊",
+    "usersEmoji": "👥",
+    "listingsEmoji": "📝",
+    "categoriesEmoji": "📂",
+    "reportsEmoji": "🚩",
+    "boostedEmoji": "⚡",
+    "locationsEmoji": "📍",
+    "settingsEmoji": "⚙️"
   },
   "currency": {
     "symbol": "XAF",
