--- a/src/lib/i18n/strings.fr.json
+++ b/src/lib/i18n/strings.fr.json
@@ -39,7 +39,190 @@
     "noResults": "Aucun résultat trouvé",
     "theme": "Thème",
     "language": "Langue",
-    "optional": "Optionnel"
+    "optional": "Optionnel",
+    "expand": "Développer",
+    "collapse": "Réduire"
+  },
+  "admin": {
+    "dashboard": "Tableau de bord Admin",
+    "overview": "Aperçu",
+    "users": "Utilisateurs",
+    "listings": "Annonces",
+    "categories": "Catégories",
+    "boosted": "Annonces Boostées",
+    "locations": "Localisations",
+    "settings": "Paramètres",
+    "navigation": "Navigation",
+    "totalUsers": "Total Utilisateurs",
+    "totalListings": "Total Annonces",
+    "activeListings": "Annonces Actives",
+    "pausedListings": "Annonces en Pause",
+    "totalBoosted": "Total Boostées",
+    "activeBoosted": "Boostées Actives",
+    "totalCategories": "Total Catégories",
+    "totalLocations": "Total Localisations",
+    "totalEarnings": "Revenus Totaux",
+    "userGrowth": "Croissance des Utilisateurs",
+    "listingsPerCategory": "Annonces par Catégorie",
+    "earningsOverTime": "Revenus au Fil du Temps",
+    "boostedByTier": "Annonces Boostées par Niveau",
+    "locationDistribution": "Distribution des Localisations",
+    "recentActivity": "Activité Récente",
+    "type": "Type",
+    "nameTitle": "Nom/Titre",
+    "user": "Utilisateur",
+    "date": "Date",
+    "siteInformation": "Informations du Site",
+    "siteName": "Nom du Site",
+    "siteDescription": "Description du Site",
+    "footerText": "Texte du Pied de Page",
+    "branding": "Marque",
+    "logo": "Logo",
+    "favicon": "Favicon",
+    "uploadNew": "Télécharger Nouveau",
+    "recommendedLogo": "Recommandé: 200x200px PNG ou JPG",
+    "recommendedFavicon": "Recommandé: 32x32px ICO",
+    "saveSettings": "Enregistrer Paramètres",
+    "usersManagement": "Gestion des Utilisateurs",
+    "name": "Nom",
+    "email": "Email",
+    "role": "Rôle",
+    "status": "Statut",
+    "createdAt": "Créé Le",
+    "actions": "Actions",
+    "promote": "Promouvoir",
+    "suspend": "Suspendre",
+    "delete": "Supprimer",
+    "listingsManagement": "Gestion des Annonces",
+    "title": "Titre",
+    "owner": "Propriétaire",
+    "category": "Catégorie",
+    "status": "Statut",
+    "createdAt": "Créé Le",
+    "pause": "Mettre en Pause",
+    "publish": "Publier",
+    "categoriesManagement": "Gestion des Catégories",
+    "englishName": "Nom Anglais",
+    "frenchName": "Nom Français",
+    "listingType": "Type d'Annonce",
+    "parentCategory": "Catégorie Parente",
+    "noneTopLevel": "Aucune (catégorie de premier niveau)",
+    "addNewCategory": "Ajouter Nouvelle Catégorie",
+    "editCategory": "Modifier Catégorie",
+    "categoriesHierarchy": "Hiérarchie des Catégories",
+    "locationsManagement": "Gestion des Localisations",
+    "region": "Région",
+    "city": "Ville",
+    "quarter": "Quartier",
+    "addNewLocation": "Ajouter Nouvelle Localisation",
+    "editLocation": "Modifier Localisation",
+    "locationsHierarchy": "Hiérarchie des Localisations",
+    "boostedListings": "Annonces Boostées",
+    "listing": "Annonce",
+    "tier": "Niveau",
+    "price": "Prix",
+    "startDate": "Date de Début",
+    "endDate": "Date de Fin",
+    "isActive": "Est Active",
+    "accessDenied": "Accès Refusé",
+    "noPermission": "Vous n'avez pas la permission d'accéder à cette page.",
+    "confirmAction": "Confirmer l'Action",
+    "areYouSure": "Êtes-vous sûr de vouloir effectuer cette action?",
+    "confirm": "Confirmer",
+    "cancel": "Annuler",
+    "deleteCategory": "Supprimer Catégorie",
+    "deleteCategoryMessage": "Êtes-vous sûr de vouloir supprimer cette catégorie? Toutes les annonces dans cette catégorie seront affectées.",
+    "deleteLocation": "Supprimer Localisation",
+    "deleteLocationMessage": "Êtes-vous sûr de vouloir supprimer cette localisation? Toutes les annonces avec cette localisation seront affectées.",
+    "suspendUser": "Suspendre Utilisateur",
+    "suspendUserMessage": "Êtes-vous sûr de vouloir suspendre cet utilisateur?",
+    "deleteUser": "Supprimer Utilisateur",
+    "deleteUserMessage": "Êtes-vous sûr de vouloir supprimer cet utilisateur? Cette action ne peut pas être annulée.",
+    "pauseListing": "Mettre en Pause Annonce",
+    "pauseListingMessage": "Êtes-vous sûr de vouloir mettre en pause cette annonce?",
+    "deleteListing": "Supprimer Annonce",
+    "deleteListingMessage": "Êtes-vous sûr de vouloir supprimer cette annonce? Cette action ne peut pas être annulée.",
+    "search": "Rechercher",
+    "searchByTitle": "Rechercher par titre",
+    "status": "Statut",
+    "allStatuses": "Tous les statuts",
+    "draft": "Brouillon",
+    "pending": "En attente",
+    "published": "Publié",
+    "paused": "Mis en pause",
+    "expired": "Expiré",
+    "removed": "Supprimé",
+    "category": "Catégorie",
+    "allCategories": "Toutes les catégories",
+    "user": "Utilisateur",
+    "allUsers": "Tous les utilisateurs",
+    "applyFilters": "Appliquer les filtres",
+    "title": "Titre",
+    "owner": "Propriétaire",
+    "created": "Créé",
+    "actions": "Actions",
+    "pause": "Mettre en pause",
+    "publish": "Publier",
+    "delete": "Supprimer",
+    "previous": "Précédent",
+    "next": "Suivant",
+    "showing": "Affichage de",
+    "to": "à",
+    "of": "sur",
+    "listings": "annonces",
+    "searchLocations": "Rechercher des localisations...",
+    "noneTopLevelCategory": "Aucune (catégorie de premier niveau)",
+    "subgroup": "Sous-groupe",
+    "subcategory": "Sous-catégorie",
+    "saveCategory": "Enregistrer la catégorie",
+    "noneRegion": "Aucune (Région)",
+    "createLocation": "Créer une localisation",
+    "updateLocation": "Mettre à jour la localisation",
+    "noLocationsFound": "Aucune localisation trouvée.",
+    "tryDifferentSearch": "Essayez un autre terme de recherche.",
+    "saving": "Enregistrement...",
+    "good": "Bien",
+    "service": "Service",
+    "job": "Emploi",
+    "allTiers": "Tous les niveaux",
+    "top": "Haut",
+    "premium": "Premium",
+    "featured": "En vedette",
+    "paymentStatus": "Statut de paiement",
+    "paid": "Payé",
+    "pending": "En attente",
+    "failed": "Échoué",
+    "refunded": "Remboursé",
+    "priceXAF": "Prix (XAF)",
+    "active": "Actif",
+    "inactive": "Inactif",
+    "dates": "Dates",
+    "starts": "Débute",
+    "expires": "Expire",
+    "unknownUser": "Utilisateur inconnu",
+    "reportsManagement": "Gestion des signalements",
+    "reports": "Signalements",
+    "reportID": "ID du signalement",
+    "reporter": "Signalé par",
+    "reason": "Raison",
+    "markReviewed": "Marquer comme revu",
+    "takeAction": "Prendre une action",
+    "suspendListing": "Suspendre l'annonce",
+    "warnUser": "Avertir l'utilisateur",
+    "removeListing": "Supprimer l'annonce",
+    "status_open": "Ouvert",
+    "status_reviewing": "En révision",
+    "status_closed": "Fermé",
+    "noReportsFound": "Aucun signalement trouvé",
+    "noReportsToDisplay": "Il n'y a actuellement aucun signalement à afficher.",
+    "overviewEmoji": "📊",
+    "usersEmoji": "👥",
+    "listingsEmoji": "📝",
+    "categoriesEmoji": "📂",
+    "reportsEmoji": "🚩",
+    "boostedEmoji": "⚡",
+    "locationsEmoji": "📍",
+    "settingsEmoji": "⚙️"
   },
   "currency": {
     "symbol": "XAF",
@@ -96,7 +279,8 @@
     "purchase": "Acheter un Boost",
     "manage": "Gérer le boost",
     "active": "Boost Actif",
-    "listing": "Booster l'annonce"
+    "listing": "Booster l'annonce",
+    "pausedListing": "Impossible de booster les annonces en pause. Veuillez d'abord publier votre annonce."
   },
   "messages": {
     "inbox": "Boîte de réception",
